# safenet

./: .gitignore  LICENSE  LICENSE.txt  README.md
FTP/FtpClient/FtpClient/: FtpClient.pro  ftp.qrc  ftpwindow.cpp  ftpwindow.h  main.cpp  qftp.h
FTP/FtpServer/FtpServer/: FtpServer.pro  ftpdatasocket.cpp  ftpdatasocket.h  ftpfilesocket.cpp  ftpfilesocket.h  ftplistitem.cpp  ftplistitem.h  ftpmlsitem.cpp  ftpmlsitem.h  ftpplugin.cpp  ftpplugin.h  ftpport.cpp  ftpport.h  ftpserver.cpp  ftpserver.h  main.cpp
HTTP/JerseyEmbeddedHTTPServer/: mycert.keystore  pom.xml
HTTP/httpclient/: certificates.qrc  httpclient.pro
HTTP/httpclient/include/: filedeleter.h  filelister.h  (+6 more)
TCPClientServer/TcpClient/: TcpClient.pro  client.cpp  client.h  main.cpp
TCPClientServer/TcpServer/: TcpServer.pro  main.cpp  server.cpp  server.h
algorithms/: algorithms.pro
algorithms/include/: cipher.h
algorithms/src/: cipher.cpp  main.cpp
client/: README.md  safenet.pro
client/android/: AndroidManifest.xml
client/include/: cryptoimage.h  imagedownloader.h  keydownloader.h  manager.h  servermodel.h
client/resource/: Authors.qml  LocalPicture.qml  PageDownload.qml  Props.qml  RemoteFileBrowser.qml  certificates.qrc  mycert.crt  mycert.key  qtquickcontrols2.conf
client/safenet/: FileBrowser.qml  PictureViewer.qml  Props.qml  qml.qrc  qmldir  safenet.pro
client/src/: cryptoimage.cpp  imagedownloader.cpp  imageprovider.cpp  imageuploader.cpp  main.cpp  manager.cpp  sslconfig.cpp
prototype/: CMakeLists.txt
prototype/include/: CMT.h
prototype/src/: CMT.cpp  main.cpp
server/: README.md  pom.xml
windows/: README.md  Safenet.x64.wxs  build.bat
windows/resource/: LICENSE.rtf
wix/: LICENSE.rtf  README.md  Safenet.wxs  build.bat  win_filelist.txt
(+74 files in other folders)
